--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -36,6 +37,11 @@
     transform: rotate(360deg);
   }
 }
+
+#map {
+  height: 100%;
+  width: 100%;
+}
 .mapContainer {
   margin-top: 25px;
 }
@@ -52,4 +58,26 @@
 
 .updateButton {
   margin-top: 20px;
+}
+.tt-overlay-panel {
+  background-color: #ffffff;
+  border-radius: 0;
+  box-shadow: 0 4px 24px 0 rgba(0, 0, 0, .16);
+  font-family: Gotham, Helvetica, Arial, sans-serif;
+  padding: 24px 16px;
+  z-index: 1;
+}
+.tt-overlay-panel.-center {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.tt-overlay-panel__close {
+  background: none;
+  border: 1px solid transparent;
+  outline: none;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
